blog.gyus.me 링크 수정

--- a/src/pages/diary/2020/10/2020년-10월의-일상.md
+++ b/src/pages/diary/2020/10/2020년-10월의-일상.md
@@ -26,7 +26,7 @@ featured: images/october1.jpg
 
 어쨋든 결과적으로 나에게 일이 많이 들어오게 되었다. 개선을 하려고 했던 과제들은 모두 나중으로 미뤄지고 꼭 해야되는 것만 야근을 해서라도 하겠다고 했다. 그렇지만 가능하면 야근을 하지 않으려고 노력중이다. 개선과제들을 어떻게 할지가 좀 고민이긴한데, 해야될일들을 먼저해놓고 생각해야될 것 같다.
 
-[팀원의 이직](https://blog.gyus.me/diary/thinking-good-manager/) 에 대해서는 따로 글을 하나 더 쓰긴 했다. 주로 징징거리는 글이다.
+[팀원의 이직](https://home.gyus.me/diary/thinking-good-manager/) 에 대해서는 따로 글을 하나 더 쓰긴 했다. 주로 징징거리는 글이다.
 
 ## 10월 10일
 
