featured 이미지 추가

--- a/src/pages/diary/2020/11/2020년-11월-일기.md
+++ b/src/pages/diary/2020/11/2020년-11월-일기.md
@@ -3,7 +3,7 @@ title: "2020년 11월의 일상"
 date: "2020-12-01"
 category: "diary"
 published: true
-# featured: images/october1.jpg
+featured: images/november.jpg
 ---
 
 - [파이썬의 기본 도구들](https://blog.gyus.me/2020/python-basic-tools/)이라는 글을 쓰고 홍보를 하였다. 귀도반 로의 글보다는 좀 반응이 적긴 했지만, 꾸준히 하는게 중요할 것 같다는 생각이 들었다.
