--- a/src/pages/diary/2020/11/2020년-11월-일기.md
+++ b/src/pages/diary/2020/11/2020년-11월-일기.md
@@ -6,7 +6,7 @@ published: true
 featured: images/november.jpg
 ---
 
-- [파이썬의 기본 도구들](https://blog.gyus.me/2020/python-basic-tools/)이라는 글을 쓰고 홍보를 하였다. 귀도반 로의 글보다는 좀 반응이 적긴 했지만, 꾸준히 하는게 중요할 것 같다는 생각이 들었다.
+- [파이썬의 기본 도구들](https://blog.gyus.me/2020/python-basic-tools/)이라는 글을 쓰고 홍보를 하였다. 귀도 반 로썸의 글보다는 좀 반응이 적긴 했지만, 꾸준히 하는게 중요할 것 같다는 생각이 들었다.
 
 - 뭔가 netlify 가 느릴때는 나의 블로그도 같이 터지는 것 같아서, 블로그 서버를 이전해야하나 고민중이다.
   (github pages로 이전했다)
