11월 21일 내용 추가

--- a/src/pages/diary/2020/11/2020년-11월-일기.md
+++ b/src/pages/diary/2020/11/2020년-11월-일기.md
@@ -53,6 +53,7 @@ featured: images/november.jpg
 ## 11월 21일
 
 - SQL 의 group by 관련해서 정리를 조금 했다.
+- 교회 목장의 커플이 결혼한다고 해서 결혼식을 다녀왔다. 코로나가 무서워서 밥은 먹지 않고 그냥 축하만 해주고 돌아왔다.
 
 ## 11월 22일
 
