--- a/src/pages/2021/2021_08_til.md
+++ b/src/pages/2021/2021_08_til.md
@@ -46,6 +46,27 @@ for (const [key, value] of obj.entries()) {
 구글링을 해보면 `query-string` 패키지를 쓰고 있는것을 많이 발견하고는 하는데, [URLSearchParams](https://developer.mozilla.org/en-US/docs/Web/API/URLSearchParams)
 를 사용하자.
 
+관련해서 간단한 hook을 만들었다.
+
+```javascript
+import { useLocation } from "react-router-dom";
+
+export const useSearchParams = (name: string) => {
+  const { search } = useLocation();
+  const searchParams = new URLSearchParams(search);
+  return searchParams.get(name) || "";
+};
+```
+
+사용은 아래와 같이 하면 된다.
+
+```
+const param1 = useSearchParams("param1")
+```
+
+값이 없는 경우는 빈 문자열을 리턴하도록 해두었다.
+
+
 > query-string 의 parse 함수가 리턴하는 타입이 string 또는 string[] 라서 굉장히 많은 삽질을 했다.
 
 ## antd의 셀렉트 박스의 사이즈 고정하기
